syntax = "proto3";
package LiftLog.Ui.Models.SessionBlueprintDao;

import "Models/Utils.proto";
import "google/protobuf/duration.proto";

message SessionBlueprintContainerDaoV2 {
    repeated SessionBlueprintDaoV2 session_blueprints = 1;
}

message SessionBlueprintDaoV2 {
    string name = 1;
    repeated ExerciseBlueprintDaoV2 exercise_blueprints = 2;
    string notes = 3;
}


message ExerciseBlueprintDaoV2 {
    string name = 1;
    int32 sets  = 2;
    int32 reps_per_set = 3;
    reserved 4; // was initial weight
    LiftLog.Ui.Models.DecimalValue weight_increase_on_success = 5;
    RestDaoV2 rest_between_sets = 6;
    bool superset_with_next = 7;
    string notes = 8;
}

message RestDaoV2 {
    google.protobuf.Duration min_rest = 1;
    google.protobuf.Duration max_rest = 2;
    google.protobuf.Duration failure_rest = 3;
}
